--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service - love nature</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     
@@ -85,14 +86,19 @@
 
     <section>
         <span>
-            <div></div>
+            <div>Why Love Nature</div>
+            <p>Your customers just learned what services you offer. Tell them why they should work with you or your team, for example you could highlight your experience and positive client reviews.</p> <br>
+            <p>The badges illustrate this.  We also focus on key benefits they will get while using our services, namely quick turnaround times and dedicated support. You could also use them to show awards you won for your best work</p>
         </span>
 
         <span>
-            <img src="./images/svgexport-9.svg" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <i class="fa-solid fa-certificate"></i>
+            <i class="material-icons-outlined">
+star_border</i>
+            <i class="material-icons-outlined">
+star_border</i>
+            <i class="material-icons-outlined">
+star_border</i>
         </span>
     </section>
 
