--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact-love nature</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <main class="contact_main">
         <header>
             <img src="./images/svgexport-1.svg" alt="" height="50px">
     
+            <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle" id="menu-toggle">
             <div class="navbar">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
@@ -25,7 +27,7 @@
     </main>
 
     <section class="contact_grid">
-        <div>
+        <div class="contact_info">
             <p class="contact_p1">You can find us at</p>
             <p class="contact_p">EMAIL</p>
             <P class="contact_p2">alabiolumide38@gmail.com</p>
@@ -46,7 +48,7 @@
                     </div>
         </div>
 
-        <div>
+        <div class="contact_form">
             <h4 class="contact_p1">Let's get in touch</h4>
             <form action="" >
                 <input type="text" placeholder="Your name"> <br>
@@ -84,5 +86,7 @@
 
         <p>Love Nature by Mighty dev</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
