--- a/index.html
+++ b/index.html
@@ -13,50 +13,51 @@
         <header>
             <img src="./images/svgexport-1.svg" alt="" height="50px">
     
-            <div class="navbar">
+            <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle" id="menu-toggle">
+            <nav class="navbar">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./services.html">Service</a>
                 <a href="./contact.html">Contact</a>
                 <button class="nav_button">816-805-3286</button>
-            </div>
+            </nav>
         </header> 
         <!-- <img src="./images/header-hero.jpg" alt="" height="650px" width="100%">  -->
         <div>
-            <p style="font-size: 50px; line-height: 55px; padding-left: 50px;">we all love</p>
-            <p style="font-size: 117px; line-height: 130px;" >nature</p>
-            <p style="font-size: 16px; line-height: 34px; padding-left: 40px;">Look deep into nature, and you will</p>
-            <p style="font-size: 16px; line-height: 24px; padding-left: 60px;">understand everything better</p>
+            <p class="p1" >we all love</p>
+            <p class="p2" >nature</p>
+            <p class="p3" >Look deep into nature, and you will</p>
+            <p class="p4" >understand everything better</p>
             <button class="main_button">Get Started</button>
         </div>
 
     </main>
 
-    <section class="services">
-        <h1 class="topic">Our Services</h1> <br>
-            <main class="divider"></main>
+    <section class="services" style="height: 200px;">
+        <h1 class="text">Our Services</h1> <br>
+            <main  class="divider"></main>
     </section>
 
-    <section>
-        <div class="service-grid">
-            <span>
+    <section class="Service_section">
+        <div class="Service">
+            <span class="col">
                 <img src="./images/service-1.jpg" alt="">
-                <h3 style="font-size: 20px; color: rgb(83, 105, 66);">Web Design</h3>
-                <p style="font-size: 16px; width: 300px;">
+                <h3>Web Design</h3>
+                <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
                 </p>
             </span>
-            <span>
+            <span class="col">
                 <img src="./images/service-2.jpg" alt="">
-                <h3 style="font-size: 20px; color: rgb(83, 105, 66);">Graphic Design</h3>
-                <p style="font-size: 16px; width: 300px;">
+                <h3>Graphic Design</h3>
+                <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
                 </p>
             </span>
-            <span>
+            <span class="col">
                 <img src="./images/service-3.jpg" alt="">
-                <h3 style="font-size: 20px; color: rgb(83, 105, 66);">UX Design</h3>
-                <p style="font-size: 16px; width: 300px;">
+                <h3>UX Design</h3>
+                <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
                 </p>
             </span>
@@ -78,7 +79,7 @@
     </section>
 
     <section class="about_us">
-    <span>
+    <span class="about_text">
             <p class="about_1">About us</p>
 
             <p class="about_2">
@@ -92,7 +93,7 @@
             <button class="about_button">Find Out More</button>
         </span>
 
-        <span>
+        <span class="about_image">
             <img src="./images/leaf.jpg" alt="">
         </span>
     </section>
@@ -118,5 +119,7 @@
 
             <p>Love Nature by Mighty dev</p>
         </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
