--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <header>
             <img src="./images/svgexport-1.svg" alt="" height="50px">
     
+            <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle" id="menu-toggle">
             <div class="navbar">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
@@ -50,12 +51,12 @@
         </section>
 
     <section class="about_testimonial">
-        <img src="./images/svgexport-4.svg" alt=""><br>
+        <img class="img1" src="./images/svgexport-4.svg" alt=""><br>
         <p class="about_testimonial_p">
             “Love Nature has an amazing team of hard working professionals. It has been a pleasure to meet them.”
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img class="img2"src="./images/avatar_on_about.png" alt="">
+                <p class="avatar_on_about">Emily Davis</p>
             </div>
         </p>
     </section>
@@ -71,6 +72,8 @@
         <img src="./images/svgexport-5.svg" alt="" height="50px">
 
         <p>Love Nature by Mighty dev</p>
-    </footer>
+</footer>
+<script src="script.js"></script>
 </body>
+</html>
 </html>
