--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service - love nature</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
     
@@ -13,7 +13,8 @@
         <header>
             <img src="./images/svgexport-1.svg" alt="" height="50px">
     
-            <div class="navbar">
+            <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle" id="menu-toggle">
+            <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./services.html">Service</a>
@@ -114,5 +115,7 @@ star_border</i>
 
         <p>Love Nature by Mighty dev</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
