--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- landing page  -->
     <main class="landing_page">
         <header>
-            <img src="./images/svgexport-1.svg" alt="" height="50px">
+            <img src="./images/svgexport-1.svg" alt="Love Nature Logo" height="50px">
     
             <img src="./images/svgexport-2.svg" alt="Menu" class="menu-toggle" id="menu-toggle">
             <nav class="navbar">
@@ -22,40 +22,39 @@
                 <button class="nav_button">816-805-3286</button>
             </nav>
         </header> 
-        <!-- <img src="./images/header-hero.jpg" alt="" height="650px" width="100%">  -->
-        <div>
-            <p class="p1" >we all love</p>
-            <p class="p2" >nature</p>
-            <p class="p3" >Look deep into nature, and you will</p>
-            <p class="p4" >understand everything better</p>
+
+        <div class="hero_content">
+            <p class="p1">we all love</p>
+            <p class="p2">nature</p>
+            <p class="p3">Look deep into nature, and you will</p>
+            <p class="p4">understand everything better</p>
             <button class="main_button">Get Started</button>
         </div>
-
     </main>
 
     <section class="services" style="height: 200px;">
         <h1 class="text">Our Services</h1> <br>
-            <main  class="divider"></main>
+        <main class="divider"></main>
     </section>
 
     <section class="Service_section">
         <div class="Service">
             <span class="col">
-                <img src="./images/service-1.jpg" alt="">
+                <img src="./images/service-1.jpg" alt="Web Design">
                 <h3>Web Design</h3>
                 <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
                 </p>
             </span>
             <span class="col">
-                <img src="./images/service-2.jpg" alt="">
+                <img src="./images/service-2.jpg" alt="Graphic Design">
                 <h3>Graphic Design</h3>
                 <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
                 </p>
             </span>
             <span class="col">
-                <img src="./images/service-3.jpg" alt="">
+                <img src="./images/service-3.jpg" alt="UX Design">
                 <h3>UX Design</h3>
                 <p>
                     Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
@@ -65,21 +64,21 @@
     </section>
 
     <section class="testimonial">
-        <img src="./images/svgexport-4.svg" alt="" height="20px">
+        <img src="./images/svgexport-4.svg" alt="Quote" height="20px">
         <div>
             <p class="testimony">
-                “Original and with an innate understanding of their customer’s needs, the team at Love Nature are always a pleasure to work with.”
+                "Original and with an innate understanding of their customer's needs, the team at Love Nature are always a pleasure to work with."
             </p>
         </div>
 
-        <div>
-            <img src="./images/avatar_on_home.png" alt="" height="70px">
+        <div class="testimonial_author">
+            <img src="./images/avatar_on_home.png" alt="Jane Miller" height="70px">
             <p class="avatar_on_home">Jane Miller</p>
         </div>
     </section>
 
     <section class="about_us">
-    <span class="about_text">
+        <span class="about_text">
             <p class="about_1">About us</p>
 
             <p class="about_2">
@@ -87,38 +86,38 @@
             </p>
 
             <p class="about_3">
-                Because when a visitor first lands on your website, you’re a stranger to them. They have to get to know you in order to want to read your blog posts, subscribe to your email newsletter, or buy what you’re selling.
+                Because when a visitor first lands on your website, you're a stranger to them. They have to get to know you in order to want to read your blog posts, subscribe to your email newsletter, or buy what you're selling.
             </p>
 
             <button class="about_button">Find Out More</button>
         </span>
 
         <span class="about_image">
-            <img src="./images/leaf.jpg" alt="">
+            <img src="./images/leaf.jpg" alt="Nature leaf">
         </span>
     </section>
 
     <section class="question">
         <h3 class="question_heading">QUESTIONS?</h3>
-        <P class="question_p">
-            Whether you’re curious about features, a free trial, or even press, we’re here to answer any questions.
-        </P>
+        <p class="question_p">
+            Whether you're curious about features, a free trial, or even press, we're here to answer any questions.
+        </p>
 
         <button class="question_button">Let's Talk Now</button>
     </section>
 
-        <footer>
-            <div class="foot_bar">
-                <li>Home</li>
-                <li>About</li>
-                <li>Service</li>
-                <li>Contact</li>
-            </div>
+    <footer>
+        <div class="foot_bar">
+            <a href="./index.html">Home</a>
+            <a href="./about.html">About</a>
+            <a href="./services.html">Service</a>
+            <a href="./contact.html">Contact</a>
+        </div>
 
-            <img src="./images/svgexport-5.svg" alt="" height="50px">
+        <img src="./images/svgexport-5.svg" alt="Love Nature Logo" height="50px">
 
-            <p>Love Nature by Mighty dev</p>
-        </footer>
+        <p>Love Nature by Mighty dev</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
